# RAG-projects

./: README.md  pyproject.toml
RAG-projects/embedding/: embedding_in_pg_vector.py
RAG-projects/quering_db/: querying_pg_vector.py
pg_vector-practice/quering_db/: querying_pg_vector.py
