[project]
name = "ai-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langchain-postgres>=0.0.17",
    "openai>=2.24.0",
    "psycopg>=3.3.3",
    "pypdf>=6.7.5",
    "python-dotenv>=1.2.2",
]
